# Zvonarev-ES

./: README.md
Cmake/: CMakeLists.txt  README.md
Cmake/GameOfLife/src/: Game.cpp  Game.h  Grid.cpp  Grid.h  Renderer.cpp  Renderer.h  main.cpp
MCNP/: README.md
MCNP/Отчёт 2  Соболева Звонарёв/: L2.xlsx  inp_file  mctal  output  ЛабРаб2 Соболева Звонарёв.docx
MCNP/Отчёт 3 Соболева Звонарёв/: Лабораторная работа №3 Соболева Звонарёв.docx
MCNP/Отчёт 3 Соболева Звонарёв/Задание 1/: l3.t  lab3, taks1.xlsx  mctal  out
MCNP/Отчёт 4 Cоболева Звонарёв/: Lab4.xlsx  Лабораторная работа 4 Соболева Звонарёв.docx
c/: README.md
c++/: README.md
c++/Dima's game (tamagochi)/: AboutPet.cpp  RatGame.cpp
c/Detector Interface/: DrawSpec.h  Spectrum.cbp  Spectrum.depend  Spectrum.layout  main.c  resource.h
c/detector msp430 code/: main.c
delphi/: README.md
delphi/Метод ньютона конечных разностей/: Project1.dproj  Project1.dproj.local  Project1.identcache  Project1.stat  Unit1.dfm  Unit1.pas
delphi/Уравнения/: Project1.dpr  Project1.dproj  Project1.dproj.local  Project1.identcache  Unit1.dfm  Unit1.pas
python/Для лабораторной работы/: urezanie.py
qt/: README.md
qt/Mandelbrot/: Mandelbrot.cpp  Mandelbrot.h  Mandelbrot.pro  Mandelbrot.qrc  Mandelbrot.ui  main.cpp  minelabel.cpp  minelabel.h
qt/Rrasseivanie/: DataScreen.cpp  DataScreen.h  PaintWidjet.h  Rrasseivanie.pro  lines.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  partcle.cpp  partcle.h
qt/TaskManagerPython/: README.md  main.py  mainwindow.py  tasksProcessor.py  user.py
Сертификаты/: README.md
(+309 files in other folders)
